--- a/Clock-iOS.xcodeproj/xcshareddata/xcschemes/Clock-iOS.xcscheme
+++ b/Clock-iOS.xcodeproj/xcshareddata/xcschemes/Clock-iOS.xcscheme
@@ -70,6 +70,13 @@
             ReferencedContainer = "container:Clock-iOS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "googleApiKey"
+            value = "AIzaSyDEvXe9v37Nt4JvNba9FiZ_umbSyTt68Aw"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
